# YATA

./: .gitmodules  README.md
YATA-PCB/: LICENSE  README.md  YATA-PCB.kicad_pcb  YATA-PCB.kicad_prl  YATA-PCB.kicad_pro  YATA-PCB.kicad_sch  fp-info-cache
YATA-PCB/Library.pretty/: Akizuki-SMA.kicad_mod  CP_Elec_10.3x10.3.kicad_mod  IC149-100-014-B5.kicad_mod  PA013.kicad_mod  sma.lbr
YATA-PCB/jlcpcb/: project.db
YATA-PCB/jlcpcb/gerber/: YATA-PCB-B_Cu.gbl  YATA-PCB-B_Mask.gbs  YATA-PCB-B_Paste.gbp  YATA-PCB-B_Silkscreen.gbo  YATA-PCB-Edge_Cuts.gm1  YATA-PCB-F_Cu.gtl  YATA-PCB-F_Mask.gts  YATA-PCB-F_Paste.gtp  YATA-PCB-F_Silkscreen.gto  YATA-PCB-In1_Cu.g1  YATA-PCB-In2_Cu.g2  YATA-PCB-NPTH-drl_map.gbr  YATA-PCB-NPTH.drl  YATA-PCB-PTH-drl_map.gbr  YATA-PCB-PTH.drl  YATA-PCB-job.gbrjob
YATA-PCB/jlcpcb/production_files/: BOM-YATA-PCB.csv
YATA-RTL/: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  yata-rtl.def
YATA-RTL/chisel/: build.sbt
YATA-RTL/chisel/src/main/scala/: BlindRotate.scala  ButterflyADD.scala  ChangeSizer.scala  Config.scala  ExternalProduct.scala  INTorus.scala  KeyCompression.scala  NTT.scala  PolynomialMulByXai.scala  SPI.scala  Util.scala  ascon.scala  xoshiro.scala
YATA-RTL/chisel/src/main/scala/AsyncQueue/: AsyncQueue.scala  AsyncResetReg.scala  BundleMap.scala  CompileOptions.scala  Counter.scala  Crossing.scala  ShiftReg.scala  SynchronizerReg.scala  package.scala
YATA-RTL/chisel/src/test/cpp/: CMakeLists.txt  bktest.cpp  cpptest.cpp  maxpower.cpp
YATA-RTL/python/: NTTlazy.py  montgomeryconstant.py  primitive-root.py  radix4search.py  signedmontgomery.py
YATA-RTL/testvectorgen/: CMakeLists.txt  pull.bash  testvectorgen.cpp
YATA-script/: .gitignore  Equipment.md  README.md  bkpickle.py  measured_plot.py  oneshottest.py  requirements.txt  turnoff.py
YATA-script/logs/: decompress_pickles.sh
YATA-script/testvectors/: README.md  asconseed0.tv  asconseed1.tv  compress_intermediate.tv  compress_output.tv  input.tv  intermediate.tv  precise_intermediate.tv  precise_output.tv  xoshiro.tv  xoshiroseed.tv
